# first-rust

./: .env  .gitignore  Cargo.toml
client/: .env  Cargo.toml
client/configuration/: base.yaml  local.yaml  prod.yaml
client/migration/: Cargo.toml
client/migration/src/: lib.rs  m20250506_060047_create_user.rs  main.rs
client/settings/: app-base.toml  local.toml  prod.toml
client/src/: configuration.rs  lib.rs  main.rs  startup.rs
client/src/authentication/: create_user_usecase.rs  credential.rs  mod.rs  users_repo.rs
client/src/configure/: app.rs  db.rs  env.rs  mod.rs  redis.rs
client/src/constant/: mod.rs
client/src/entities/: example.md  users.rs
client/src/example/: orm.rs
client/src/handler/user/: user.rs
client/src/router/: user.rs
client/src/server/: app_server.rs  mod.rs  state.rs
client/src/server/router/: user.rs
client/src/test/: mod.rs  test_endpoint.rs
client/src/user/: email.rs  handler.rs  mod.rs  user_controller.rs  user_id.rs  user_use_case.rs  user_usecase.rs  users_repo.rs
client/src/user/authentication/: credential.rs  middleware.rs  mod.rs
client/src/user/token/: claim.rs  mod.rs  token_use_case.rs
client/tests/: main.rs
client/tests/authentication/: mod.rs  user_repo_test.rs
client/tests/context/: app.rs
docker-compose/: docker-compose.yml
docker-compose/mysql/init/: client-init.sql  gateway-init.sql  init.sql  price-init.sql
gateway/: .env
gateway/migration/: Cargo.toml
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/config/: db.rs  env.rs  http.rs  load_env.rs  loader.rs  mod.rs  profile.rs
lib/src/db/: conn.rs  database.rs  mod.rs
lib/src/env/: mod.rs
lib/src/http/: client.rs  mod.rs
lib/src/http/tracing/: middleware.rs  mod.rs  request_tracing.rs  tracing_context.rs
lib/src/log/: log.md  logging.rs
lib/src/rand/: mod.rs  seed.rs  string.rs
lib/src/time/: clock.rs
lib/src/util/: dir.rs  mod.rs
migration/: Cargo.toml
price/: .env  Cargo.toml
price/migration/: Cargo.toml
runbook/: project-init.sh
runbook/migration/: migration.sh
