[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
# add common project as dependencies
utils = { path = "../utils" }
lib = { path = "../lib" }

tokio = { version = "1.44.2", features = ["full"] }
# ORM
sea-orm = { version = "1.1.0", features = [
    "sqlx-mysql",
    "runtime-async-std-native-tls",
    "macros",
] }
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
anyhow = "1.0.98"
# need this to load the .env file
dotenvy = "0.15"
tracing = { version = "0.1.41", features = ["log"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = { version = "^4.7" }
secrecy = { version = "^0.10", features = ["serde"] }
# actix
actix-web = "^4.10"
actix-http = "^3.10"
argon2 = { version = "0.5.3", features = ["std"] }
[dependencies.uuid]
version = "1.16.0"
# Lets you generate random UUIDs
features = ["v4"]
[dev-dependencies]
wiremock = "0.6.2"
test-context = "0.4.1"
