[package]
name = "lib"
version = "0.1.0"
edition = "2024"

[dependencies]
ctor = "^0.4"
#tracing
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
    "registry",
    "env-filter",
] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
dotenvy = "0.15"

actix-web = { version = "4.10.2", optional = false }
futures-util = { version = "0.3.31", optional = false }
anyhow = "1.0.98"
# need this to load the .env file
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = { version = "^4.7" }
config = "0.15.11"
once_cell = "^1.19"
rand = "^0.9"
chrono = "0.4.41"
[dependencies.uuid]
version = "1.16.0"
# Lets you generate random UUIDs
features = ["v4"]
