[package]
name = "price_migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "price_migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
sea-orm = { version = "1.1.0", features = ["macros"] }

[dependencies.sea-orm-migration]
version = "1.1.0"
features = ["sqlx-mysql", "runtime-async-std-native-tls"]
